# fathomdb

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bosun.yaml  deny.toml  lychee.toml  mkdocs.yml  output.json  package-lock.json  package.json
archive/pre-0.6.0/crates/fathomdb-engine/: Cargo.toml  sqlite.env
archive/pre-0.6.0/crates/fathomdb-engine/src/: lib.rs  projection.rs  rebuild_actor.rs  sqlite.rs  telemetry.rs  trace_support.rs  vector_projection_actor.rs
archive/pre-0.6.0/crates/fathomdb-engine/tests/: admin_introspection.rs  configure_embedding.rs  (+3 more)
crates/fathomdb/: Cargo.toml
crates/fathomdb-engine/: Cargo.toml
crates/fathomdb-engine/src/: admin.rs  coordinator.rs  database_lock.rs  embedder.rs  executable_trust.rs  ids.rs  lib.rs  operational.rs  projection.rs  rebuild_actor.rs  runtime.rs  sqlite.rs  telemetry.rs  writer.rs
crates/fathomdb-engine/src/admin/: fts.rs  introspection.rs  mod.rs  provenance.rs  vector.rs
crates/fathomdb-engine/src/embedder/: builtin.rs  mod.rs
crates/fathomdb-engine/src/writer/: fts_extract.rs  mod.rs
crates/fathomdb-engine/tests/: admin_introspection.rs  async_rebuild_tests.rs  configure_embedding.rs  configure_vec_per_kind.rs  tracing_events.rs  vector_projection_actor.rs  write_path_vector_enqueue.rs
crates/fathomdb-query/: Cargo.toml
crates/fathomdb-query/src/: ast.rs  builder.rs  compile.rs  fusion.rs  lib.rs  plan.rs  relax.rs  search.rs  sql_adapt.rs  text_query.rs
crates/fathomdb-schema/: Cargo.toml
crates/fathomdb-schema/src/: bootstrap.rs  lib.rs  migration.rs
crates/fathomdb-schema/tests/: vector_projection_schema.rs
crates/fathomdb/benches/: production_paths.rs
crates/fathomdb/src/: admin_ffi.rs  feedback.rs  ffi_types.rs  lib.rs  node.rs  node_types.rs  python.rs  python_types.rs  search.rs  search_ffi.rs  write_request_builder.rs
crates/fathomdb/tests/: auto_drain_vector.rs  builtin_embedder.rs  client_workloads.rs  configure_embedding_napi.rs  expansion_edges.rs  external_content.rs  grouped_query_reads.rs  helpers.rs  injection.rs  json_in_filter_surface.rs  last_access_touch.rs  profile_ffi.rs  python_admin_ffi.rs  python_search_ffi.rs  query_embedder_surface.rs  response_cycle_feedback.rs  scaffold.rs  scale.rs  semantic_search_ffi.rs  semantic_search_ffi_dispatch.rs  semantic_search_surface.rs  text_search_surface.rs  vector_search_surface.rs  write_request_builder.rs
dev/release/fixtures/cargo-skew/: Cargo.toml
python/: README.md  pyproject.toml
python/examples/harness/: __init__.py  app.py  engine_factory.py  models.py  telemetry.py  verify.py
python/examples/harness/scenarios/: __init__.py  adaptive_search.py  canonical.py  graph.py  recovery.py  runtime.py  search.py  vector.py
python/fathomdb/: __init__.py  _admin.py  _cli.py  _engine.py  _feedback.py  _query.py  _types.py  _write_builder.py  errors.py
python/fathomdb/embedders/: __init__.py  _base.py  _jina.py  _openai.py  _stella.py  _subprocess.py
python/fathomdb/tests/: test_grouped_expand.py
python/tests/: test_admin_introspection.py  test_async_rebuild.py  test_bindings.py  test_cli.py  test_concurrency_deadlocks.py  test_configure_embedding.py  test_configure_vec_per_kind.py  test_doc_hygiene.py  test_embedders.py  test_profile_management.py  test_response_cycle_feedback.py  test_search_builder.py  test_semantic_search.py  test_stress.py  test_text_search_surface.py  test_tokenizer_presets.py  test_verify_release_gates.py
python/tests/examples/: test_harness_baseline.py  test_harness_vector.py
src/python/: README.md  pyproject.toml
src/python/eval/: __init__.py  apnews_corpus.py  autoe_judge.py  autoe_pilot_run.py  baselines_084.py  ce_rerank_probe.py  ce_rerank_rule.py  corpus_validity.py  d0b_parity_run.py  d0b_powered_recall.py  decision_rule_083.py  decision_rule_084.py  elps_live_harness.py  exp_cov1_common.py  exp_cov1_extract.py  exp_cov1_replay_harness.py  exp_cov1_sweep.py  exp_cov_census.py  expa_recall_run.py  expaf_value_run.py  expb_joint_tune_run.py  expm4_embedder_ceiling_run.py  fracc_classifier_run.py  fracc_voi_run.py  frozen_candidate_scorer.py  gap_decomposition_rule.py  gap_decomposition_run.py  gate0_rescope.py  gate2_oracle_run.py  gold_capture.py  gold_gen.py  gold_repin.py  graph_arm_recall.py  locomo_loader.py  m1_baseline.py  m1_baseline_run.py  m1_decision_rule.py  m1_graph_build.py  m1_power_sim.py  m1_ppr.py  (+16 more)
src/python/fathomdb/: __init__.py  _fathomdb.pyi  admin.py  config.py  engine.py  errors.py  filter.py  graph.py  read.py  types.py
src/python/tests/: _pyright_narrowing_fixture.py  _test_hooks_gate.py  conftest.py  functional_retrieve_fixture.json  functional_search_fixture.json  test_apnews_corpus.py  test_autoe_judge.py  test_autoe_pilot_run.py  test_baselines_084.py  test_ce_rerank_probe.py  test_consumer_boundary.py  test_corpus_eval_qa.py  test_d0b_parity_run.py  test_d0b_powered_recall.py  test_decision_rule_083.py  test_decision_rule_084.py  test_embed.py  test_erase_source.py  test_errors.py  test_exp_cov1.py  test_exp_cov_census.py  test_exp_obs_explain_parity.py  test_f9_explain_wrapper_propagation.py  test_ffi_safety.py  test_filter_unification.py  test_functional_graph.py  test_functional_graph_arm.py  test_functional_reranker.py  test_functional_retrieve.py  test_functional_search.py  test_gap_decomposition_rule.py  test_gap_decomposition_run.py  test_gold_pipeline.py  test_idspace_parity.py  test_interfaces_doc.py  test_m1_answerer_retry.py  test_m1_baseline.py  test_m1_decision_rule.py  test_m1_graph_build.py  test_m1_power_sim.py  (+44 more)
src/rust/crates/fathomdb/: Cargo.toml
src/rust/crates/fathomdb-cli/: Cargo.toml
src/rust/crates/fathomdb-embedder/: Cargo.toml
src/rust/crates/fathomdb-embedder-api/: Cargo.toml
src/rust/crates/fathomdb-engine/: Cargo.toml
src/rust/crates/fathomdb-napi/: Cargo.toml
src/rust/crates/fathomdb-py/: Cargo.toml
src/rust/crates/fathomdb-query/: Cargo.toml
src/rust/crates/fathomdb-schema/: Cargo.toml
(+2908 files in other folders)
