[workspace]
members = [
    "src/rust/crates/fathomdb",
    "src/rust/crates/fathomdb-cli",
    "src/rust/crates/fathomdb-embedder",
    "src/rust/crates/fathomdb-embedder-api",
    "src/rust/crates/fathomdb-engine",
    "src/rust/crates/fathomdb-query",
    "src/rust/crates/fathomdb-schema",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/coreyt/fathomdb"
rust-version = "1.82"

[workspace.metadata.fathomdb]
public_docs = ["docs"]
internal_docs = ["dev"]
