[workspace]
members = [
    "src/rust/crates/fathomdb",
    "src/rust/crates/fathomdb-cli",
    "src/rust/crates/fathomdb-embedder",
    "src/rust/crates/fathomdb-embedder-api",
    "src/rust/crates/fathomdb-engine",
    "src/rust/crates/fathomdb-napi",
    "src/rust/crates/fathomdb-py",
    "src/rust/crates/fathomdb-query",
    "src/rust/crates/fathomdb-schema",
]
resolver = "2"

[workspace.package]
# Axis W lockstep version per dev/design/release.md § Version axes.
# Inherited by every workspace crate via `version.workspace = true` EXCEPT
# `fathomdb-embedder-api`, which opts out and carries an independent
# Axis E version in its own `[package]` block (semver-stable trait
# surface — bumps only when the trait changes).
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/coreyt/fathomdb"
rust-version = "1.95"

[workspace.metadata.fathomdb]
public_docs = ["docs"]
internal_docs = ["dev"]
