[workspace]
members = [
    "src/rust/crates/fathomdb",
    "src/rust/crates/fathomdb-cli",
    "src/rust/crates/fathomdb-embedder",
    "src/rust/crates/fathomdb-embedder-api",
    "src/rust/crates/fathomdb-engine",
    "src/rust/crates/fathomdb-napi",
    "src/rust/crates/fathomdb-py",
    "src/rust/crates/fathomdb-query",
    "src/rust/crates/fathomdb-schema",
]
resolver = "2"

[workspace.package]
# Axis W lockstep version per dev/design/release.md § Version axes.
# Inherited by every workspace crate via `version.workspace = true` EXCEPT
# `fathomdb-embedder-api`, which opts out and carries an independent
# Axis E version in its own `[package]` block (semver-stable trait
# surface — bumps only when the trait changes).
#
# Axis E note: axis-E (`fathomdb-embedder-api`) was held on axis-W
# lockstep through the 0.6.0 RC bootstrap (rc.1) and the GA cut so a
# single sentinel-publish established registry presence for all 7 crates
# plus embedder-api at `0.6.0`. Post-GA, axis-E is independent —
# embedder-api bumps on its own cadence when the trait surface changes,
# decoupled from axis-W bumps.
version = "0.8.9"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/coreyt/fathomdb"
rust-version = "1.95"

[workspace.metadata.fathomdb]
public_docs = ["docs"]
internal_docs = ["dev"]

# In-workspace sibling crate dependencies. `cargo publish` requires every
# dep to carry a `version` requirement so the registry resolver can find
# them once `path` is stripped at publish time. Centralizing the version
# pins here keeps the release substrate (`scripts/set-version.sh`) editing
# one location per axis, not N call-sites.
#
# Axis W entries are bumped lockstep with [workspace.package].version.
# Axis E (fathomdb-embedder-api) carries its independent version per
# dev/design/release.md § Version axes.
[workspace.dependencies]
fathomdb              = { path = "src/rust/crates/fathomdb",              version = "0.8.9" }
fathomdb-embedder     = { path = "src/rust/crates/fathomdb-embedder",     version = "0.8.9" }
fathomdb-embedder-api = { path = "src/rust/crates/fathomdb-embedder-api", version = "0.6.1" }
fathomdb-engine       = { path = "src/rust/crates/fathomdb-engine",       version = "0.8.9" }
fathomdb-query        = { path = "src/rust/crates/fathomdb-query",        version = "0.8.9" }
fathomdb-schema       = { path = "src/rust/crates/fathomdb-schema",       version = "0.8.9" }
