[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "fathomdb"
version = "0.2.1"
description = "Local datastore for persistent AI agents — graph, vector, and full-text search on SQLite"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Corey Thompson", email = "coreyt@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/coreyt/fathomdb"
Repository = "https://github.com/coreyt/fathomdb"
Issues = "https://github.com/coreyt/fathomdb/issues"

[tool.maturin]
manifest-path = "../crates/fathomdb/Cargo.toml"
module-name = "fathomdb._fathomdb"
python-source = "."
features = ["python", "sqlite-vec", "tracing"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D"]
"**/tests/**" = ["D"]
"**/test_*.py" = ["D"]
