[package]
name = "fathomdb-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
sqlite-vec = ["dep:sqlite-vec", "fathomdb-schema/sqlite-vec"]

[dependencies]
fathomdb-query.workspace = true
fathomdb-schema.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
sqlite-vec = { workspace = true, optional = true }
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
