[package]
name = "fathomdb-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fathomdb-embedder-api = { path = "../fathomdb-embedder-api" }
fathomdb-query = { path = "../fathomdb-query" }
fathomdb-schema = { path = "../fathomdb-schema" }
