[package]
name = "fathomdb-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query AST, builder, and SQL compiler for the fathomdb agent datastore"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
