[package]
name = "fathomdb-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query AST, builder, and SQL compiler for the fathomdb agent datastore"

[lints]
workspace = true

[features]
tracing = ["dep:tracing"]

[dependencies]
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
