[package]
name = "fathomdb-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
sqlite-vec = ["dep:sqlite-vec"]

[dependencies]
rusqlite.workspace = true
sqlite-vec = { workspace = true, optional = true }
thiserror.workspace = true
