[package]
name = "fathomdb-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite schema management and migrations for the fathomdb agent datastore"

[lints]
workspace = true

[features]
sqlite-vec = ["dep:sqlite-vec"]

[dependencies]
rusqlite.workspace = true
sqlite-vec = { workspace = true, optional = true }
thiserror.workspace = true
