[package]
name = "fathomdb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local datastore for persistent AI agents with graph, vector, and full-text search on SQLite"

[lib]
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "production_paths"
harness = false

[lints]
workspace = true

[features]
node = ["dep:napi", "dep:napi-derive"]
python = ["dep:pyo3", "dep:pyo3-log"]
sqlite-vec = ["fathomdb-engine/sqlite-vec"]
tracing = ["fathomdb-engine/tracing"]

[dependencies]
fathomdb-engine.workspace = true
fathomdb-query.workspace = true
fathomdb-schema.workspace = true
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build.workspace = true

[dev-dependencies]
criterion.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
