[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fathomdb"
version = "0.8.0"
description = "FathomDB Python SDK — PyO3 binding to the fathomdb-engine Rust core"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6", "maturin>=1.7,<2", "pyyaml>=6"]
lint = ["ruff>=0.6"]
typecheck = ["pyright>=1.1.380"]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.6", "pyright>=1.1.380", "maturin>=1.7,<2", "pyyaml>=6"]

[tool.maturin]
manifest-path = "../rust/crates/fathomdb-py/Cargo.toml"
module-name = "fathomdb._fathomdb"
python-source = "."
# EU-6 FIX-1: this list is what BOTH editable installs (`pip install -e .`,
# `maturin develop`) AND the release workflow's `PyO3/maturin-action`
# inherit unless they pass an explicit `--features` override. Therefore
# it must match the SHIPPED feature surface exactly:
#
#   * `pyo3/extension-module` — required for the abi3 extension build.
#   * `default-embedder` — kept ON so editable installs have parity with
#     the shipped wheel (the `use_default_embedder=True` opt-in must
#     work against `pip install -e .` without any extra step).
#
# `test-hooks` is intentionally NOT listed here: it is dev-only (exposes
# `_write_vector_for_test` etc. on `Engine`) and would leak onto every
# wheel `release.yml`'s build-python job emits to PyPI. Tests that need
# the hook surface (`test_use_default_embedder.py`, `test_ffi_safety.py`,
# the AC-067 force-panic probe) trigger a session-scoped pytest fixture
# in `tests/conftest.py` that runs
#   `maturin develop --features pyo3/extension-module,test-hooks,default-embedder`
# before the suite. The release workflow's `args:` pins its own explicit
# feature list, so this file never gates the shipped artifact.
features = ["pyo3/extension-module", "default-embedder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["fathomdb", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.10"
venvPath = "../.."
venv = ".venv"
