[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fathomdb"
version = "0.8.9"
description = "FathomDB Python SDK — PyO3 binding to the fathomdb-engine Rust core"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6", "maturin>=1.7,<2", "pyyaml>=6", "numpy>=1.24", "scipy>=1.11", "networkx>=3.0"]
lint = ["ruff>=0.6"]
typecheck = ["pyright>=1.1.380"]
# numpy is required by the M1 eval harness (eval/m1_baseline.py, eval/m1_baseline_run.py,
# eval/m1_graph_build.py) and their test suites (test_m1_baseline.py imports numpy directly).
# Without this declaration `pip install -e src/python[dev]` fails with ModuleNotFoundError
# ([P1] from codex §9 Slice 5 fix-1 review).
#
# scipy + networkx are required by the M1 PPR-fusion arm (eval/m1_ppr.py — networkx for
# Personalized-PageRank, scipy as its sparse-linalg backend) and test_m1_ppr.py (Slice 15).
# They are HARNESS-only CPU deps (NOT linked into the FathomDB library → footprint-invariant
# safe; design §9). Declared here so a clean `pip install -e src/python[dev]` runs the arm.
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.6", "pyright>=1.1.380", "maturin>=1.7,<2", "pyyaml>=6", "numpy>=1.24", "scipy>=1.11", "networkx>=3.0"]

[tool.maturin]
manifest-path = "../rust/crates/fathomdb-py/Cargo.toml"
module-name = "fathomdb._fathomdb"
python-source = "."
# EU-6 FIX-1: this list is what BOTH editable installs (`pip install -e .`,
# `maturin develop`) AND the release workflow's `PyO3/maturin-action`
# inherit unless they pass an explicit `--features` override. Therefore
# it must match the SHIPPED feature surface exactly:
#
#   * `pyo3/extension-module` — required for the abi3 extension build.
#   * `default-embedder` — kept ON so editable installs have parity with
#     the shipped wheel (the `use_default_embedder=True` opt-in must
#     work against `pip install -e .` without any extra step).
#
# `test-hooks` is intentionally NOT listed here: it is dev-only (exposes
# `_write_vector_for_test` etc. on `Engine`) and would leak onto every
# wheel `release.yml`'s build-python job emits to PyPI. So a plain
# `pip install -e 'src/python[dev]'` has NO hook surface. The few tests that
# need it carry `@pytest.mark.requires_test_hooks`; `tests/conftest.py` may
# rebuild the binding with
#   `maturin develop --features pyo3/extension-module,test-hooks,default-embedder,...`
# but ONLY when that is authorized AND the active venv belongs to this source
# tree (TC-27 — see `tests/_test_hooks_gate.py`). Otherwise those tests SKIP
# visibly and the rest of the suite runs normally. The release workflow's
# `args:` pins its own explicit feature list, so this file never gates the
# shipped artifact.
features = ["pyo3/extension-module", "default-embedder", "default-reranker"]

[tool.pytest.ini_options]
# Slice 25: the R2 eval harness lives at `eval/` (sibling of `fathomdb/`); it is
# test-infra, NOT part of the shipped wheel (maturin only packages `fathomdb`).
# Prepend the python-source root so `import eval.r2_parity_eval` resolves under
# pytest's prepend import mode without an editable install of the harness.
pythonpath = ["."]
# Slice 15a fix-3 (codex §9 [P2]): register the `integration` marker so it does not
# emit a PytestUnknownMarkWarning. These are OPT-IN tests (real HuggingFace model
# loads, possible network); they skip in the default gate and run only with
# FDB_S15A_INTEGRATION=1 + torch/transformers present (see test_s15a_embedder_probe.py).
markers = [
    "integration: opt-in tests that load real models (require FDB_S15A_INTEGRATION=1 + torch/transformers)",
    # 0.8.20 Slice 5 fix-6 (codex §9 [P2]): tests needing the dev-only `test-hooks`
    # binding surface. conftest.py turns these into visible SKIPs (never silent
    # passes) when the installed binding lacks the feature and TC-27 forbids an
    # unattended `maturin develop`.
    "requires_test_hooks: needs the dev-only `test-hooks` binding surface (see tests/_test_hooks_gate.py)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["fathomdb", "tests", "eval"]
# `tests/` has no `__init__.py` (pytest prepend import mode inserts the conftest's
# own directory on sys.path), so sibling helper imports like
# `from _test_hooks_gate import ...` in tests/conftest.py are resolvable at
# runtime but invisible to pyright without this.
extraPaths = ["tests"]
typeCheckingMode = "standard"
pythonVersion = "3.10"
venvPath = "../.."
venv = ".venv"
