# AC-051a synthetic fixture: exercises cargo's resolver-time skew detection
# on a SIBLING-TRANSITIVE shape, matching the real release shape
# (`fathomdb` + `fathomdb-embedder` skewing on `fathomdb-embedder-api`).
# `mock-skew-consumer-a` (analogue of `fathomdb`) pins `mock-skew-api =
# "=1.0.0"`; `mock-skew-consumer-b` (analogue of `fathomdb-embedder`) pins
# `mock-skew-api = "=2.0.0"`. The probe pulls both, so cargo must resolve
# `mock-skew-api` to a single version satisfying both pins — impossible.
# Real-name swap (`fathomdb-embedder-api` etc.) deferred until REQ-048
# publishing lands.

[workspace]

[package]
name = "cargo-skew-probe"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
mock-skew-consumer-a = { path = "./mock-skew-consumer-a" }
mock-skew-consumer-b = { path = "./mock-skew-consumer-b" }
