[package]
name = "fathomdb-cli"
description = "FathomDB CLI — operator and diagnostics binary (fathomdb doctor, fathomdb export, ...)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fathomdb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fathomdb = { path = "../fathomdb" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
