[package]
name = "fathomdb-cli"
description = "FathomDB CLI — operator and diagnostics binary (fathomdb doctor, fathomdb export, ...)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fathomdb"
path = "src/main.rs"

# 0.7.2 PR-7 — perf regression detector. Reads dev/perf-history/, groups by
# (ac_id, n), flags the latest run vs the rolling median of prior runs.
# See dev/design/perf-regression-detection.md.
[[bin]]
name = "perf-regression-check"
path = "src/bin/perf-regression-check.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fathomdb.workspace = true
fathomdb-embedder.workspace = true
serde_json = "1"

[features]
default = []
# EU-5b — enable the `fathomdb doctor warm-cache` subcommand to actually
# invoke the default-embedder loader. Without the feature, the subcommand
# still parses but reports that the binary was built without
# `default-embedder` support.
default-embedder = ["fathomdb-embedder/default-embedder"]

[dev-dependencies]
tempfile = "3"
