[package]
name = "fathomdb-embedder-api"
description = "FathomDB embedder trait surface — semver-stable contract for embedder plugins (Axis E)."
# Axis E: independent semver per dev/design/release.md § Version axes.
# This crate is the semver-stable trait surface; it bumps only when the
# trait surface changes, not on every workspace lockstep release.
version = "0.6.0-rc.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
