[package]
name = "fathomdb-embedder"
description = "FathomDB embedder runtime — built-in embedder implementations for the fathomdb-embedder-api trait."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fathomdb-embedder-api.workspace = true

# Default-embedder loader deps. Gated behind the `default-embedder` feature
# per dev/plans/prompts/0.7.1-EMBEDDER-UNDEFER-HANDOFF.md §EU-3 so callers
# who never opt in pay zero dependency cost.
ureq = { version = "2", optional = true, default-features = false, features = ["tls"] }
sha2 = { version = "0.10", optional = true }
dirs = { version = "5", optional = true }
fs2 = { version = "0.4", optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "1", optional = true }

[features]
default = []
default-embedder = ["dep:ureq", "dep:sha2", "dep:dirs", "dep:fs2", "dep:serde_json", "dep:thiserror"]
# Exposes `LoaderConfig` constructors/setters and `load_with_config` so
# integration tests (or downstream test harnesses) can substitute base URLs,
# cache roots, and pinned shas. Production callers MUST NOT enable this
# feature — `load_pinned_default_embedder()` is the only production-blessed
# entry point per ADR-0.7.1 scope-guardrail #1.
loader-test-hooks = ["default-embedder"]

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
sha2 = "0.10"
