[package]
name = "fathomdb-embedder"
description = "FathomDB embedder runtime — built-in embedder implementations for the fathomdb-embedder-api trait."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fathomdb-embedder-api.workspace = true

# Default-embedder loader deps. Gated behind the `default-embedder` feature
# per dev/plans/prompts/0.7.1-EMBEDDER-UNDEFER-HANDOFF.md §EU-3 so callers
# who never opt in pay zero dependency cost.
ureq = { version = "2", optional = true, default-features = false, features = ["tls"] }
sha2 = { version = "0.11", optional = true }
dirs = { version = "5", optional = true }
fs2 = { version = "0.4", optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "1", optional = true }

# Candle stack + tokenizer for the default `CandleBgeEmbedder` (EU-4).
# Pinned to candle 0.10 (current stable line) and tokenizers 0.20. Gated
# under `default-embedder` so the no-feature build closure remains thin
# (EMB-3 wheel-size gate). `safetensors` is reached transitively via
# candle-core's re-export per ADR-0.6.0-default-embedder consequences;
# no direct dep here.
candle-core         = { version = "0.10", optional = true }
candle-nn           = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true, default-features = false }
tokenizers          = { version = "0.20", optional = true, default-features = false, features = ["onig"] }

[features]
default = []
default-embedder = [
    "dep:ureq",
    "dep:sha2",
    "dep:dirs",
    "dep:fs2",
    "dep:serde_json",
    "dep:thiserror",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]
# 0.8.2 Slice E1 — the default CPU cross-encoder reranker (TinyBERT-L-2). Pulls
# the SAME Candle + tokenizers + loader stack as `default-embedder` (CPU only),
# but is a distinct opt-in so the engine can enable reranking without forcing the
# default embedder on, and the feature-off build stays ML-free + no-network.
default-reranker = [
    "dep:ureq",
    "dep:sha2",
    "dep:dirs",
    "dep:fs2",
    "dep:serde_json",
    "dep:thiserror",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]
# GPU acceleration (opt-in; default build stays CPU so tests + byte-stability are
# unaffected). Activate the device at runtime with FATHOMDB_EMBED_DEVICE=cuda|metal.
# Cross-vendor (AMD ROCm / Intel) is NOT a candle backend — that path is a separate
# `impl Embedder` (ONNX-Runtime) via EmbedderChoice::Caller; see
# dev/design/0.8.1-embedder-gpu-and-portability.md.
embed-cuda = ["default-embedder", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
embed-metal = ["default-embedder", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
# 0.8.12 — GPU acceleration for the CE reranker (opt-in; default build stays CPU
# so Decision 2 / byte-stability are unaffected). Mirrors `embed-cuda` exactly
# but pulls in `default-reranker` (not `default-embedder`) and is activated at
# runtime via the SEPARATE knob FATHOMDB_RERANK_DEVICE=cuda|cuda:N|metal. The CE
# stack is the same Candle bert path, so enabling the cuda backend on the shared
# candle crates is the only build-side change. Cross-vendor (AMD/Intel) is not a
# candle backend — out of scope, same as the embedder.
rerank-cuda = ["default-reranker", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
rerank-metal = ["default-reranker", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
# Exposes `LoaderConfig` constructors/setters and `load_with_config` so
# integration tests (or downstream test harnesses) can substitute base URLs,
# cache roots, and pinned shas. Production callers MUST NOT enable this
# feature — `load_pinned_default_embedder()` is the only production-blessed
# entry point per ADR-0.7.1 scope-guardrail #1.
loader-test-hooks = ["default-embedder"]

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
sha2 = "0.11"

# 0.8.7 Slice 10 — GPU vs CPU embed speedup measurement. Needs a constructible
# embedder, so it only builds when `default-embedder` (CPU) or `embed-cuda` is
# active; without this guard `cargo build --examples` on the thin no-feature
# build would fail to compile (R-GPU-2: default build unperturbed).
[[example]]
name = "gpu_speedup"
required-features = ["default-embedder"]
